# tauri-plugin-deno

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  rollup.config.js
dist-js/: index.iife.js
examples/tauri-app/: .gitignore  README.md  package.json
examples/tauri-app/src/: App.svelte  index.html  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src-tauri/src-deno/: main.js  other.ts
examples/tauri-app/src-tauri/src-js/: main.js
guest-js/: deno_bundler.js  index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: run_code.toml
permissions/schemas/: schema.json
src/: commands.rs  deno_lib.rs  deno_ops.rs  deno_runtime.js  deno_ts_loader.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  plugin_runtime.js
