[package]
name = "tauri-plugin-deno"
version = "0.1.0"
authors = [ "Marco Mengelkoch" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js",  "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-deno"
license = "MIT"
homepage = "https://github.com/marcomq/tauri-plugin-python"
repository = "https://github.com/marcomq/tauri-plugin-python"

[dependencies]
tauri = { version = "2.2.4" }
serde = "1.0"
thiserror = "2"

deno_core = "0.339.0"
deno_ast = { version = "0.45.1", features = ["transpiling"] }
deno_error = "0.5.6"
reqwest = "0.12"
tokio = { version = "1.43.0", features = ["full"] }

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
