[package]
name = "tauri-plugin-deno"
version = "0.3.0"
authors = [ "Marco Mengelkoch" ]
description = "A tauri 2 plugin to use javascript code (deno) in the backend."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-deno"
license = "MIT"
homepage = "https://github.com/marcomq/tauri-plugin-deno"
repository = "https://github.com/marcomq/tauri-plugin-deno"

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"

deno_core = "0.338"
deno_fs = "0.103.0"
deno_error = "0.5.5"
deno_runtime = { version = "0.201", features = ["transpile"] } # , features = ["include_js_files_for_snapshotting"] }
deno_resolver = "0.24.0"
sys_traits = "0.1.8"

reqwest = "0.12"
tokio = { version = "1.43.0", features = ["full"] }
# deno_runtime = { version = "0.201" } # , features = ["include_js_files_for_snapshotting"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
